codex-rs/tui_app_server/src/chatwidget/snapshots/codex_tui_app_server__chatwidget__tests__interrupted_turn_pending_steers_message.snap
---
source: tui_app_server/src/chatwidget/tests.rs
expression: info
---
• Model interrupted to submit steer instructions.
