codex-rs/tui_app_server/src/chatwidget/snapshots/codex_tui_app_server__chatwidget__tests__local_image_attachment_history_snapshot.snap
---
source: tui_app_server/src/chatwidget/tests.rs
expression: combined
---
• Viewed Image
  └ example.png
